<resources>
    <string name="app_name">Pocket Trainer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_pantalla_principal">PantallaPrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="bienvenida">Bienvenido/a a Pocket Trainer!</string>
    <string name="lema">Tu entrenador personal por excelencia</string>
    <string name="comenzar">Comencemos con algunas preguntas para personalizar tu rutina y encontrar lo más óptimo para tí!</string>
    <string name="iniciar_cuestionario">Comenzar!</string>

    <string name="seleccion_horario">A continuación, selecciona los días que tienes libres a la semana para ejercitarte:</string>
    <string name="seleccion_lunes">Lunes</string>
    <string name="seleccion_martes">Martes</string>
    <string name="seleccion_miercoles">Miercoles</string>
    <string name="seleccion_jueves">Jueves</string>
    <string name="seleccion_viernes">Viernes</string>
    <string name="seleccion_sabado">Sabado</string>
    <string name="seleccion_domingo">Domingo</string>
    <string name="seleccion_horas">Ahora selecciona tu horario, ten en cuenta que se necesita al menos una hora para completar la rutina:</string>
    <string name="hecho">Hecho!</string>
    <string name="elegir">Elegir</string>
    <string name="siguiente">Siguiente</string>
    <string name="title_activity_seleccion_tiempo">SeleccionTiempoActivity</string>

    <string name="cuerpo">Selecciona la complexión de cuerpo con el que tengas más parecido:</string>
    <string name="delgado">Delgado/a</string>
    <string name="robusto">Robusto/a</string>
    <string name="fuerte">Fornido</string>

    <string name="meta">Selecciona tu meta objetivo:</string>
    <string name="bajar">Bajar de peso</string>
    <string name="masa_muscular">Masa muscular</string>
    <string name="ambos">Ambos!</string>

    <string name="terminado">Perfecto! Hemos terminado tu configuración inicial, ya estás listo para tu primer rutina.</string>
    <string name="recuerda">Recuerda que siempre puedes cambiar estas preferencias en la pantalla de ajustes en cualquier momento.</string>
    <string name="comenzar_button">Comenzar!</string>

    <string name="ajustes">Preferencias</string>
    <string name="cambiar">Cambiar</string>
    <string name="ver">Ver</string>
    <string name="horario">Mi horario: </string>

    <string name="editar">Editar</string>
    <string name="cuerpo_elegido">Cuerpo base: </string>
    <string name="meta_elegido">Cuerpo objetivo: </string>
    <string name="nueva_meta">Elige una nueva meta: </string>
    <string name="reset">Reiniciar ajustes</string>
    <string name="guardar">Guardar</string>
    <string name="guardar_y_salir">Guardar y salir</string>
    <string name="empty"> </string>

    <string name="menu">menu</string>
    <string name="mi_rutina">Mi Rutina</string>
    <string name="parte_a_trabajar">Parte a Trabajar</string>
    <string name="pierna">Pierna</string>
    <string name="brazo">Brazo</string>
    <string name="abdomen">Abdomen</string>
    <string name="espalda">Espalda</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="viernes">Viernes</string>
    <string name="actualizar_rutina">Actualizar Rutina</string>
    <string name="modificar_rutina">Modificar Rutina</string>
    <string name="back"><![CDATA[<]]></string>

    <string name="title_activity_ejercicios_rutina">EjerciciosRutina</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="left">Ant</string>
    <string name="right">Sig</string>

    <string name="historial_texto">Tu historial:</string>
    <string name="historial">Mi Historial</string>
    <string name="realizar_4_series_de_15_repeticiones_con_descanso_de_30_segundos_al_terminar_una_serie">Realizar 4 series de 15 repeticiones, con descanso de 30 segundos al terminar una serie</string>
    <string name="descansos">◉ Tus descansos son de 30 segundos al terminar una serie de 15 repeticiones.</string>
    <string name="repeticiones">◉ Realizar 4 series de 15 repeticiones.</string>
    <string name="tutorial_de_ejercicio">Tutorial de ejercicio</string>
    <string name="diasDisponiblesNuevo">Selecciona los días y las horas que tengas disponibles para hacer ejercicio:</string>
</resources>