<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrnd"
    tools:context=".ListoActivity">

    <TextView
        android:id="@+id/textViewTerminado"
        android:layout_width="264dp"
        android:layout_height="97dp"
        android:layout_marginTop="84dp"
        android:text="@string/terminado"
        android:textAlignment="center"
        android:textColor="#A2B9ED"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRecuerda"
        android:layout_width="342dp"
        android:layout_height="102dp"
        android:layout_marginTop="40dp"
        android:text="@string/recuerda"
        android:textAlignment="center"
        android:textColor="#A2B9ED"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTerminado" />

    <Button
        android:id="@+id/buttonComenzar"
        android:layout_width="165dp"
        android:layout_height="77dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/buttonselector"
        android:text="@string/comenzar_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRecuerda" />
</androidx.constraintlayout.widget.ConstraintLayout>